--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,6 @@
-# Created by https://www.gitignore.io/api/git,vim,code,bazel,kotlin,intellij
-# Edit at https://www.gitignore.io/?templates=git,vim,code,bazel,kotlin,intellij
 
-### Bazel ###
-# gitignore template for Bazel build system
-# website: https://bazel.build/
-
-# Ignore all bazel-* symlinks. There is no full list since this can change
-# based on the name of the directory bazel is cloned into.
-/bazel-*
+# Created by https://www.gitignore.io/api/vim,code,java,gradle,kotlin,intellij
+# Edit at https://www.gitignore.io/?templates=vim,code,java,gradle,kotlin,intellij
 
 ### Code ###
 .vscode/*
@@ -15,21 +8,6 @@
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-
-### Git ###
-# Created by git for backups. To disable backups in Git:
-# $ git config --global mergetool.keepBackup false
-*.orig
-
-# Created by git when using merge tools for conflicts
-*.BACKUP.*
-*.BASE.*
-*.LOCAL.*
-*.REMOTE.*
-*_BACKUP_*.txt
-*_BASE_*.txt
-*_LOCAL_*.txt
-*_REMOTE_*.txt
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
@@ -119,7 +97,7 @@ fabric.properties
 .idea/**/markdown-navigator.xml
 .idea/**/markdown-navigator/
 
-### Kotlin ###
+### Java ###
 # Compiled class file
 *.class
 
@@ -144,6 +122,19 @@ fabric.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+### Kotlin ###
+# Compiled class file
+
+# Log file
+
+# BlueJ files
+
+# Mobile Tools for Java (J2ME)
+
+# Package Files #
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+
 ### Vim ###
 # Swap
 [._]*.s[a-v][a-z]
@@ -164,4 +155,23 @@ tags
 # Persistent undo
 [._]*.un~
 
-# End of https://www.gitignore.io/api/git,vim,code,bazel,kotlin,intellij
+### Gradle ###
+.gradle
+build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
+
+### Gradle Patch ###
+**/build/
+
+# End of https://www.gitignore.io/api/vim,code,java,gradle,kotlin,intellij
