--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,14 @@ os: linux
 dist: trusty
 jdk: oraclejdk8
 
-script:
-  - ./gradlew build --scan -s
+jobs:
+  include:
+    - stage: build
+      script:
+        - ./gradlew build --scan -s
+    - stage: deploy
+      script:
+      - ./gradlew deploy --scan -s
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
